force-app/main/default/objects/Contact/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <length>50</length>
    <type>Text</type>
</CustomField>