force-app/main/default/objects/Contact/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy and immunology</fullName>
            </value>
            <value>
                <fullName>Adolescent medicine</fullName>
            </value>
            <value>
                <fullName>Anaesthesiology</fullName>
            </value>
            <value>
                <fullName>Aerospace medicine</fullName>
            </value>
            <value>
                <fullName>Bariatrics</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic surgery</fullName>
            </value>
            <value>
                <fullName>Child and adolescent psychiatry</fullName>
            </value>
            <value>
                <fullName>Clinical neurophysiology</fullName>
            </value>
            <value>
                <fullName>Colorectal surgery</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Developmental paediatrics</fullName>
            </value>
            <value>
                <fullName>Emergency medicine</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Forensic pathology</fullName>
            </value>
            <value>
                <fullName>Forensic psychiatry</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General surgery</fullName>
            </value>
            <value>
                <fullName>General surgical oncology</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Geriatric psychiatry</fullName>
            </value>
            <value>
                <fullName>Gynaecologic oncology</fullName>
            </value>
            <value>
                <fullName>Haematology</fullName>
            </value>
            <value>
                <fullName>Hematologic pathology</fullName>
            </value>
            <value>
                <fullName>Infectious disease</fullName>
            </value>
            <value>
                <fullName>Internal medicine</fullName>
            </value>
            <value>
                <fullName>Interventional radiology</fullName>
            </value>
            <value>
                <fullName>Intensive care medicine</fullName>
            </value>
            <value>
                <fullName>Maternal-fetal medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>