force-app/main/default/objects/Contact/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Thread</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>